# PR_OZ

./: 11_20 task.ipynb  11_25 task.py  2JOON CODE.md  Ch21_task.ipynb  Chaper0913_task.ipynb  Chaper1416_task.ipynb  Chapter0508_과제_김이준.ipynb  README.md  S_Ch04_task.ipynb  chapter0120_task.ipynb
Django_study/Chapter_1/: pyproject.toml
Django_study/Chapter_2/: db.sqlite3
Django_study/Chapter_3/: db.sqlite3
Django_study/Chapter_4/: db.sqlite3  pyproject.toml
Django_study/Chapter_5/: .gitignore
Django_study/config/: settings.py  urls.py
FastApi_study/: .python-version
FastApi_study/Day_2/: data.py  main.py
FastApi_study/Day_4/: practice_1.py  practice_2.py  practice_3.py  practice_4.py  practice_5.py  remind.py
HTML/: 08-Basic_level.html  09-Basic_level.html  10-Profile_yijoon.html  15-Basic+_level.html  Manuel_Profile.html
HTML/OZ_Task/: Kream_page.html  Readme.md  user.form.html
HTML/OZ_assignment/: 06-Basic_level.html  07-Basic_level.html  13-Basic+_level.html
HTML_study/OZ_Task/: Readme.md
HTML_study/OZ_assignment/: 04-Basic_level.html  05-Basic_level.html  11-Basic+_level.html  12-Basic+_level.html  14-Basic+_level.html  16-Basic+_level.html  17-Basic+_level.html
Linux/OZ assignment/: Task_1211.ipynb
Linux_study/OZ assignment/: Task_1210.ipynb
Python/OZ_assignment/: 11_18 task.ipynb  11_19 task.ipynb  11_21 task.ipynb  11_25 task.py
Python/OZ_sub_assignment/: 11_26_Todo list.py
Python_study/OZ_assignment/: 11_27_task.py  (+2 more)
SQL/: 11_28 task.ipynb
SQL_study/: setting file (X)
github/: readme.md
github_basic/: back.yaml  front.yaml
(+46 files in other folders)
