[project]
name = "chapter-1"
version = "0.1.0"
description = ""
authors = [
    {name = "2joonkim",email = "joon271694@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.5,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
